# honuae

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
.github/: test.yaml
.github/workflows/: test.yaml  test_actions.yaml
src/: __init__.py  mail_handler.py  plot_handler.py  webdriver_handler.py
